# Shark-Bot

./: .gitignore  MyClient.py  README.md  config.YAML  conftest.py  listofsharks.json  requirements.txt  response.json  setup.py  twitch_auth.py
PatchNotes/: 12-02-2026.md  13-11-2025.md  15-04-2026.md  17-01-2026.md  21-01-2026.md  28-02-2026.md  README.md
SQL/: README.md
SQL/birthday/: birthdays.py
SQL/birthdaySQL/: birthdays.py
SQL/clipManagement/: clips.py
SQL/deletedSQL/: deleted_messages.py
SQL/dueling/: dueling.py
SQL/fishing/: baits.py
SQL/fishingSQL/: baits.py
SQL/levellingSQL/: levellingSQL.py
SQL/modActions/: modActionsSQL.py
SQL/roles/: roles.py
SQL/rolesSQL/: emojis.schema  roles.py
SQL/sharkGames/: README.md  sharkGameSQL.py
SQL/sharkGamesSQL/: sharkGameSQL.py
SQL/social media/: tiktok.py
SQL/socialMedia/: tiktok.py  twitchLive.py  youtube.py
cogs/: clips.py
data/: gids.py
databases/: README.md
databases/social media/: README.md
dueling/: dueling.yaml
exceptions/: exceptions.MD  exceptions.py
fishing/: CMakeLists.txt  fish_multiple.pyi  fishing.py  fishing.yaml
fishing/src/: fish_multiple.cpp
handlers/: reactions.py
logModActions/: modActions.py
loops/: README.md
loops/birthdayloop/: birthdayLoop.py
loops/clipping/: clips.py
loops/levellingloop/: levelingConfig.yaml  levellingLoop.py
loops/sharkGameLoop/: sharkGameLoop.py
modApplication/: ApplicationSystem.py  CloseButton.py  ModQuestions.py  MyView.py  config.yaml  delete.py  submit.py
moderation/: tools.py
socialMedia/: tiktok.py  youtube.py
testing/: pytest.ini  test_loops.py  test_moderation.py  test_reactions.py
ticketingSystem/: CloseButton.py  MyView.py  TicketOptions.py  Ticket_System.py  read_Yaml.py  ticketing.yaml
utils/: README.md  checks.py  core.py  fishing.py  get_song.py  pullingFromTwitch.py  ticketing.py
(+4 files in other folders)
